# raidres-parser-rust

./: Cargo.toml  README.md
src/: main.rs  model.rs
test/fixtures/: K29JNG.json  raid_101.json  raidres-response.json  softres-example.json
